<resources>
    <string name="app_name">Message</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="start">START</string>
    <string name="signUpHere">SIGN UP HERE</string>
    <string name="signUp">SIGN UP</string>
    <string name="lock">You have been locked</string>
    <string name="next">NEXT</string>
    <string name="success">Logged in successfully !</string>
    <string name="notice">%1$d more attempts remaining</string>

    <!-- Slide1 Title and Description -->
    <string name="slide_1_title">Message</string>
    <string name="slide_1_desc">A real time chat bot application.</string>

    <!-- Slide2 Title and Description -->
    <string name="slide_2_title">Interactive chat app</string>
    <string name="slide_2_desc">Chat with the bot and get replied instantly where the application uses the Simsimi Api.</string>

    <!-- Slide3 Title and Description -->
    <string name="slide_3_title">Sign Up and enjoy</string>
    <string name="slide_3_desc">Just register as a user to enjoy the beautiful features of the application</string>

    <!-- Slide4 Title and Description -->
    <string name="slide_4_title">Let\'s get started</string>
    <string name="slide_4_desc">Join the community of the users of the application and find your bot friend.</string>

    <string name="my_preference">"com.example.hp.MyPref"</string>
    <string name="my_pref_key">"com.example.hp.MyPrefKey"</string>

    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone no.</string>
    <string name="uNAme">Username</string>
    <string name="pass">Enter Password</string>
    <string name="rePass">Re-enter Password</string>
    <string name="passNotMatch">Passwords do not match</string>
    <string name="error">You must fill up the details properly</string>
    <string name="bDayError">Enter birthday correctly</string>
    <string name="phoneError">Enter phone number correctly</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="type">Start typing here...</string>
    <string name="simSimi_api">dac10ec6-af79-4759-bfac-91b307965c16</string>

</resources>
