<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hp.message.MainActivity"
    android:background="@drawable/eiffel">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="95dp"
        android:layout_marginLeft="95dp"
        android:layout_marginStart="95dp"
        android:layout_marginTop="100dp"
        android:text="@string/username"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView"
        android:layout_marginLeft="95dp"
        android:layout_marginStart="95dp"
        android:layout_marginEnd="95dp"
        android:layout_marginRight="95dp"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:hint="Enter username here"
        android:inputType="textPersonName" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="95dp"
        android:layout_marginLeft="95dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView"
        android:layout_marginEnd="95dp"
        android:layout_marginRight="11dp"
        android:layout_marginTop="100dp"
        android:text="@string/password"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="17dp"
        android:layout_marginRight="95dp"
        android:layout_marginEnd="95dp"
        android:ems="10"
        android:hint="Enter password here"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/login" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginEnd="95dp"
        android:layout_marginStart="95dp"
        android:layout_marginLeft="95dp"
        android:layout_marginTop="385dp"
        android:textColor="@android:color/holo_red_dark"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/textView3"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/signUpHere"
        android:textSize="12dp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/imageView2"
        android:layout_alignStart="@+id/imageView2"
        android:layout_alignTop="@+id/textView"
        app:srcCompat="@drawable/user" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/textView2"
        android:layout_toLeftOf="@+id/editText2"
        android:layout_toStartOf="@+id/editText2"
        app:srcCompat="@drawable/password" />



</RelativeLayout>
